--- a/contact.html
+++ b/contact.html
@@ -86,9 +86,9 @@
         <div class="container">
             <!-- Контактная информация -->
             <div class="contact-info">
-                <p><strong>Телефон:</strong> +7 (123) 456-78-90</p>
-                <p><strong>Email:</strong> support@example.com</p>
-                <p><strong>Адрес:</strong> Москва, ул. Технологий, д. 10, оф. 5</p>
+                <p><strong>Телефон:</strong> +996 997 15-13-00</p>
+                <p><strong>Email:</strong> marketgmail@.com</p>
+                <p><strong>Адрес:</strong> Бишкек , улица Ахунбаева Офис NT-Technology </p>
                 <p><strong>Часы работы:</strong> Пн-Пт: 9:00 - 18:00</p>
             </div>
 
@@ -96,9 +96,11 @@
             <div class="map mb-4">
                 <h4 class="text-center mb-3">Наше местоположение</h4>
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243647.0106363712!2d37.37884790450864!3d55.74947390281447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTXCsDQ1JzAwLjIiTiAzN8KwMjMnNDMuOSJF!5e0!3m2!1sen!2sru!4v1642569626942!5m2!1sen!2sru" 
-                    allowfullscreen="">
-                </iframe>
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8906484133064!2d74.59008677464822!3d42.83720457191582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec8368dbef8ff%3A0x0!2zNDLCsDUwJzE0LjAiTiA3NMKwMzUnMjQuMyJF!5e0!3m2!1sen!2skg!4v1642569626942!5m2!1sen!2skg" 
+    allowfullscreen="">
+</iframe>
+
+
             </div>
 
             <!-- Форма обратной связи -->
