--- a/about.html
+++ b/about.html
@@ -108,3 +108,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<nav>
+</nav>
