--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     <li class="nav-item"><a class="nav-link" href="service.html">Сервис</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link" href="payment.html">Оплата</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Портфолио</a></li>
+
 
                 </ul>
             </div>
