--- a/about.html
+++ b/about.html
@@ -78,6 +78,8 @@
                     <li class="nav-item"><a class="nav-link" href="service.html">Сервис</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link" href="payment.html">Оплата</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfoli.html">Портфолио</a></li>
+
                 </ul>
             </div>
         </div>
