--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,8 @@
                     <li class="nav-item"><a class="nav-link" href="service.html">Сервис</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link" href="payment.html">Оплата</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfoli.html">Портфолио</a></li>
+
                 </ul>
             </div>
         </div>
@@ -90,6 +92,7 @@
                 <p><strong>Email:</strong> marketgmail@.com</p>
                 <p><strong>Адрес:</strong> Бишкек , улица Ахунбаева Офис NT-Technology </p>
                 <p><strong>Часы работы:</strong> Пн-Пт: 9:00 - 18:00</p>
+                
             </div>
 
             <!-- Карта -->
