--- a/payment.html
+++ b/payment.html
@@ -66,7 +66,6 @@
                     <li class="nav-item"><a class="nav-link" href="service.html">Сервис</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link" href="payment.html">Оплата</a></li>
-
                 </ul>
             </div>
         </div>
@@ -76,22 +75,26 @@
     <div id="payment" class="section">
         <h2 class="section-title">Оплата</h2>
         <div class="container">
-            <form class="payment-form">
+            <form class="payment-form" onsubmit="return validateForm()">
                 <div class="mb-3">
                     <label for="cardNumber" class="form-label">Номер карты</label>
-                    <input type="text" class="form-control" id="cardNumber" placeholder="Введите номер карты" required>
+                    <input type="text" class="form-control" id="cardNumber" placeholder="Введите номер карты (например, 1234 5678 1234 5678)" required pattern="^\d{4} \d{4} \d{4} \d{4}$" data-bs-toggle="tooltip" data-bs-placement="top" title="Номер карты должен быть в формате 1234 5678 1234 5678">
+                    <div class="invalid-feedback">Введите корректный номер карты (например, 1234 5678 1234 5678).</div>
                 </div>
                 <div class="mb-3">
                     <label for="expiryDate" class="form-label">Срок действия</label>
-                    <input type="month" class="form-control" id="expiryDate" required>
+                    <input type="month" class="form-control" id="expiryDate" required data-bs-toggle="tooltip" data-bs-placement="top" title="Выберите месяц и год, до которых действительна ваша карта">
+                    <div class="invalid-feedback">Укажите срок действия карты.</div>
                 </div>
                 <div class="mb-3">
                     <label for="cardHolder" class="form-label">Владелец карты</label>
-                    <input type="text" class="form-control" id="cardHolder" placeholder="Имя владельца" required>
+                    <input type="text" class="form-control" id="cardHolder" placeholder="Имя владельца" required data-bs-toggle="tooltip" data-bs-placement="top" title="Введите имя владельца карты, как указано на карте">
+                    <div class="invalid-feedback">Введите имя владельца карты.</div>
                 </div>
                 <div class="mb-3">
                     <label for="cvv" class="form-label">CVV</label>
-                    <input type="text" class="form-control" id="cvv" placeholder="CVV" required>
+                    <input type="text" class="form-control" id="cvv" placeholder="CVV" required pattern="^\d{3}$" data-bs-toggle="tooltip" data-bs-placement="top" title="CVV — это 3 цифры на обратной стороне карты">
+                    <div class="invalid-feedback">Введите корректный CVV (3 цифры на обратной стороне карты).</div>
                 </div>
                 <button type="submit" class="btn btn-primary">Оплатить</button>
             </form>
@@ -99,5 +102,42 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script>
+        // Валидация формы перед отправкой
+        function validateForm() {
+            const cardNumber = document.getElementById('cardNumber');
+            const expiryDate = document.getElementById('expiryDate');
+            const cardHolder = document.getElementById('cardHolder');
+            const cvv = document.getElementById('cvv');
+
+            if (!cardNumber.checkValidity()) {
+                cardNumber.classList.add('is-invalid');
+                return false;
+            }
+            if (!expiryDate.checkValidity()) {
+                expiryDate.classList.add('is-invalid');
+                return false;
+            }
+            if (!cardHolder.checkValidity()) {
+                cardHolder.classList.add('is-invalid');
+                return false;
+            }
+            if (!cvv.checkValidity()) {
+                cvv.classList.add('is-invalid');
+                return false;
+            }
+
+            alert('Платеж успешен!'); // Уведомление об успешной оплате (в реальном проекте здесь будет вызов API)
+            return false; // Отмена отправки формы для примера
+        }
+
+        // Инициализация тултипов Bootstrap
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
+    </script>
+
 </body>
 </html>
