--- a/portfoli.html
+++ b/portfoli.html
@@ -77,7 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Компания "Tech Innovators"</h5>
                             <p class="card-text">Мы помогли компании "Tech Innovators" разработать высококачественные ноутбуки с использованием новейших технологий в области процессоров и дисплеев. Это позволило им выйти на новый уровень в индустрии персональных устройств.</p>
-                            <a href="#" class="btn btn-primary">Посмотреть подробности</a>
+                            <a href="open.html" class="btn btn-primary">Посмотреть подробности</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Компания "VR Solutions"</h5>
                             <p class="card-text">Для компании "VR Solutions" мы разработали систему виртуальной реальности, которая позволяет погружаться в трехмерные миры для образовательных и развлекательных целей. Наш проект существенно улучшил пользовательский опыт.</p>
-                            <a href="#" class="btn btn-primary">Посмотреть подробности</a>
+                            <a href="open2.html" class="btn btn-primary">Посмотреть подробности</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Компания "GadgetMaster"</h5>
                             <p class="card-text">Для "GadgetMaster" мы разработали систему для интеллектуальных гаджетов, которые могут быть интегрированы в дома и офисы. Приложение позволяет управлять устройствами через смартфоны и голосовые команды, обеспечивая максимальное удобство.</p>
-                            <a href="#" class="btn btn-primary">Посмотреть подробности</a>
+                            <a href="open3.html" class="btn btn-primary">Посмотреть подробности</a>
                         </div>
                     </div>
                 </div>
