--- a/open2.html
+++ b/open2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Новые Технологии</title>
+    <title>Портфолио - VR Solutions</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -20,7 +20,6 @@
             text-align: center;
             font-size: 36px;
             margin-bottom: 30px;
-            animation: fadeInDown 1.5s ease;
         }
         .text-center {
             font-size: 20px;
@@ -34,10 +33,6 @@
             animation: zoomIn 2s ease;
         }
         /* Анимации */
-        @keyframes fadeInDown {
-            0% { opacity: 0; transform: translateY(-20px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
         @keyframes fadeInUp {
             0% { opacity: 0; transform: translateY(20px); }
             100% { opacity: 1; transform: translateY(0); }
@@ -59,27 +54,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li><li class="nav-item"><a class="nav-link" href="portfoli.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfoli.html">Портфолио</a></li>
                     <li class="nav-item"><a class="nav-link" href="laptops.html">Ноутбуки</a></li>
                     <li class="nav-item"><a class="nav-link" href="vr-glasses.html">VR Очки</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">О нас</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Сервис</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                     <li class="nav-item"><a class="nav-link" href="payment.html">Оплата</a></li>
-                    
-
-
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Главная страница -->
-    <div id="home" class="section">
-        <h2 class="section-title">Добро пожаловать на наш сайт</h2>
+    <!-- Проект для VR Solutions -->
+    <div id="vr-solutions" class="section">
+        <h2 class="section-title">Компания "VR Solutions"</h2>
         <div class="container text-center">
-            <p>Мы предлагаем новейшие технологии, включая ноутбуки, VR очки и другие гаджеты.</p>
-            <img src="https://brgu.ru/upload/iblock/ffa/ffa74f34cb75036c5c91dba4a969dab0.jpeg" alt="Новые технологии" class="animated-image">
+            <p>Для компании "VR Solutions" мы разработали инновационную систему виртуальной реальности, которая позволяет погружаться в трехмерные миры для образовательных и развлекательных целей. Наш проект существенно улучшил пользовательский опыт.</p>
+
+            <h3>Основные особенности:</h3>
+            <ul>
+                <li><strong>Трехмерные образовательные миры:</strong> Созданы виртуальные пространства для обучения, где пользователи могут исследовать науки, например, физику или астрономию, в интерактивной среде.</li>
+                <li><strong>Интерактивные развлекательные игры:</strong> Разработаны VR-игры, которые развивают креативное мышление и реакцию.</li>
+                <li><strong>Интуитивно понятный интерфейс:</strong> Легкость в управлении системой благодаря специально разработанным контроллерам и сенсорам.</li>
+            </ul>
+            <img src="https://www.example.com/vr-image.jpg" alt="VR Solutions" class="animated-image">
         </div>
     </div>
 
